Change site structure

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: section
 ---
-{% include sections/last_post.html last_post=site.articles.last %}
-{% include sections/items_except_last.html items=site.articles %}
+{% include sections/last_post.html last_post=site.artikelen.last %}
+{% include sections/items_except_last.html items=site.artikelen %}
